# CleanRLHF

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  script.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: dependencies.yml  pre-commit.yml
framework/: .gitignore  README.md  actor.py  agent.py  commands.md  critic.py  dm_control_working_envs.md  dm_control_working_envs.txt  env.py  evaluation.py  feedback.py  feedback_util.py  performance_metrics.py  ppo.py  ppo_continuous_action.py  ppo_original.py  preference_buffer.py  prefppo.py  replay_buffer.py  reward.py  reward_net.py  sac_original.py  sac_rlhf.py  sampling.py  sweep.py  sweep_config.yaml  teacher.py  unsupervised_exploration.py  video_recorder.py
framework/agent/: actor.py  agent.py
framework/environment/: env.py
framework/feedback/: feedback.py  feedback_util.py  teacher.py
framework/reward_training/: preference_buffer.py  replay_buffer.py  reward_net.py  sampling.py  unsupervised_exploration.py
framework/slurm/: setup_venv.sh  start_job.sh  wandb_sweep.sbatch
framework/sweep_config/: ant_seed_sweep.yaml  ant_seed_sweep_1500.yaml  ant_sweep.yaml  dog_walk_sweep.yaml  half_cheetah_sweep.yaml  hopper_sweep.yaml  human_feedback_ant_sweep.yaml  humanoid_standup_sweep.yaml  humanoid_sweep.yaml  inverted_double_pendulum_sweep.yaml  inverted_pendulum_sweep.yaml  pusher_sweep.yaml  reacher_sweep.yaml  slurm_sweep.yaml  swimmer_sweep.yaml  walker_2d_sweep.yaml
framework/sweep_config/PPO/: ant_seed_sweep_original.yaml  ant_sweep.yaml  (+2 more)
framework/utils/: evaluation.py  performance_metrics.py  video_recorder.py
humanFeedback/: feedback_server.py  feedback_util2.py
humanFeedback/static/: pico.css
humanFeedback/templates/: index.html
scripts/: human_sac_Hopper_v5_salto.sh  human_sac_Swimmer_v5.sh  human_sac_Walker2D_v5.sh  pusher_hf.sh  synthetic_sac_Ant_v5.sh  synthetic_sac_HalfCheetah_v5.sh  synthetic_sac_Hopper_v5.sh  synthetic_sac_Pusher_v5.sh  synthetic_sac_Reacher_v5.sh  synthetic_sac_Swimmer_v5.sh  synthetic_sac_Walker2D_v5.sh
toolbox/: .gitignore  README.md  components.json  package-lock.json  package.json  react-router.config.ts  tailwind.config.ts
toolbox/app/: routes.ts
(+21 files in other folders)
