[tool.poetry]
name = "cleanrlhf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.flake8]
extend-ignore = ["E203", "E266", "E501", "W503"]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
gym = "0.23.1"
gymnasium = ">=0.28.1"
imageio = "^2.14.1"
mujoco = "<=2.3.3"
opencv-python = "^4.10.0"
stable-baselines3 = "2.0.0"
tensorboard = "^2.10.0"
torch = ">=1.12.1"
tyro = "^0.9.5"
numpy = "<2.0"
wandb = "^0.19.1"
scipy = ">=1.14.1"
pre-commit = "^4.0.1"
logging = "^0.4.9.6"
plotnine = "^0.14.4"
imageio-ffmpeg = "^0.5.1"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
