[tool.poetry]
name = "framework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "1.0"
imageio = "^2.36"
mujoco = "3.2"
opencv-python = "^4.10" #cv_major.cv_minor.cv_revision.package_revision
tensorboard = "^2.18"
torch = "2.5"
tyro = "^0.9.5"
numpy = "2"
wandb = "^0.19"
scipy = ">=1.15"
pre-commit = "^4.0.1"
logging = "^0.4.9.6"
plotnine = "^0.14.5"
imageio-ffmpeg = "^0.5.1"
stable-baselines3 = {version = "^2.5.0a1", allow-prereleases = true}
tqdm = "^4.67.1"
moviepy = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
