[tool.poetry]
name = "framework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.flake8]
extend-ignore = ["E203", "E266", "E501", "W503"]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^1.0"
mujoco = "3.2"
tensorboard = "^2.18"
torch = "^2.5"
tyro = "^0.9.5"
numpy = "^2.0.0"
wandb = "^0.19"
scipy = "^1.15"
pre-commit = "^4.0"
logging = "^0.4.9"
plotnine = "^0.14"
imageio-ffmpeg = "^0.5"
stable-baselines3 = "^2.5.0"
tqdm = "^4.67"
moviepy = "^2.1"
shimmy = {extras = ["dm-control"], version = "^2.0.0"}
gym = "^0.26.2"
glfw = "^2.8.0"
flask = "^3.1.0"
flask-cors = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
